# avicenna-challenge

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  example.env  pyproject.toml
config/: redis_client.py  settings.py
notification/: api.py  models.py  schemas.py  state_reports.py  tasks.py  utils.py
notification/management/commands/: consume_state_reports.py  create_users.py  send_notifications.py  send_state_reports.py
notification/migrations/: 0001_initial.py  0002_notificationemail_notificationsms_and_more.py
