[project]
name = "avicenna-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5,<6.0",
    "django>=5.2,<6.0.0",
    "django-ninja>=1.6.0,<2.0.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
    "redis>=6.0,<7.0",
]
